FIX white bg on overflow shown

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -53,11 +53,12 @@ html {
 			}
 
 			.content {
-				
+
 				.line {
 					
 					.desc-area {
 						background: $white;
+						padding-bottom: 20px;
 					
 						h4 {
 							margin-top: 80px;
